test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-16.xq
(:* ne ************** for ********************** let *****************:)foo
 let (:  where Test: K-ForExprPositionalVar-16   foo     ne    $     let        $    :)
(: Written by: Frans  let Englich                foo      let         :)foo
(: Date: 2006-10-05T18:29:37+02:00                 where      $  :)
(: Purpose:   where that the position is  computed forfoo the range expression#2). :)
(:****** $ ***************** let **** for ** where ****** $ ****foo** eq ********:)
deep-equal ne ((1,  let 2, 3, 4),
	  for    for $ at  $ p
  ne    in -10 to-7
	    ne  return $p)